workspaces.xyz: (Regression: 305212@main) Hovering on menu makes it to be jumpy https://bugs.webkit.org/show_bug.cgi?id=307933 rdar://170412045

Reviewed by NOBODY (OOPS!).

In 305212@main, the computed value for the `border-*-width` properties was
changed to no longer take the associated `border-*-style` property into account,
matching a recent spec change. This had the unexpected effect of causing CSS
transitions from the the default border style (3px none) to something like
`0px solid` to now trigger. As this aspect of the change has caused a regression,
this changes us back to using the used value of the `border-*-width` properties
for checking if a transition should fire, which seems to match other browsers.

Further discussion with the CSSWG will happen in https://github.com/w3c/csswg-drafts/issues/13511.

Test: fast/animation/transition-border-width-and-style.html
* LayoutTests/fast/animation/transition-border-width-and-style-expected.html: Added.
* LayoutTests/fast/animation/transition-border-width-and-style.html: Added.
* LayoutTests/js/suppress-asan-on-clobberize-to-workaround-asan-bug-expected.txt:
* Source/WebCore/css/CSSProperties.json:
* Source/WebCore/style/StyleChangedAnimatableProperties.cpp:
* Source/WebCore/style/StyleChangedAnimatablePropertiesCustom.h: