Source/WebCore/page/QuirksData.h
@@ -140,6 +140,7 @@ struct QuirksData {
         ShouldAvoidScrollingWhenFocusedContentIsVisibleQuirk,
         ShouldBlockFetchWithNewlineAndLessThan,
         ShouldBypassAsyncScriptDeferring,
+        ShouldComparareUsedValuesForBorderWidthForTriggeringTransitions,
         ShouldDelayReloadWhenRegisteringServiceWorker,
 #if HAVE(PIP_SKIP_PREROLL)
         ShouldDisableAdSkippingInPip,
